MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = generated

include_HEADERS = Esvg.h

ESVG_APIHEADERS = \
esvg_a.h \
esvg_animation.h \
esvg_animate_base.h \
esvg_animate_transform.h \
esvg_circle.h \
esvg_clip_path.h \
esvg_defs.h \
esvg_element.h \
esvg_ellipse.h \
esvg_g.h \
esvg_gradient.h \
esvg_image.h \
esvg_line.h \
esvg_linear_gradient.h \
esvg_main.h \
esvg_parser.h \
esvg_path.h \
esvg_polygon.h \
esvg_polyline.h \
esvg_radial_gradient.h \
esvg_rect.h \
esvg_renderable.h \
esvg_stop.h \
esvg_style.h \
esvg_svg.h \
esvg_text.h \
esvg_types.h \
esvg_use.h

EXTRA_DIST = \
esvg_private_main.h \
esvg_private_element.h \
esvg_private_style.h

installed_apiheadersdir = $(prefix)/include/esvg
installed_apiheaders_DATA = $(ESVG_APIHEADERS)

