MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = generated

include_HEADERS = Esvg.h

installed_apiheadersdir = $(includedir)/esvg
dist_installed_apiheaders_DATA = \
esvg_animate_base.h \
esvg_boolean.h \
esvg_color.h \
esvg_element.h \
esvg_element_a.h \
esvg_element_animate.h \
esvg_element_animate_transform.h \
esvg_element_animation.h \
esvg_element_circle.h \
esvg_element_clip_path.h \
esvg_element_defs.h \
esvg_element_rect.h \
esvg_element_ellipse.h \
esvg_element_g.h \
esvg_element_gradient.h \
esvg_element_image.h \
esvg_element_line.h \
esvg_element_linear_gradient.h \
esvg_element_path.h \
esvg_element_polygon.h \
esvg_element_polyline.h \
esvg_element_radial_gradient.h \
esvg_element_script.h \
esvg_element_set.h \
esvg_element_stop.h \
esvg_element_style.h \
esvg_element_svg.h \
esvg_element_text.h \
esvg_element_use.h \
esvg_element_video.h \
esvg_event.h \
esvg_length.h \
esvg_main.h \
esvg_matrix.h \
esvg_number.h \
esvg_paint.h \
esvg_paint_server.h \
esvg_parser.h \
esvg_referenceable.h \
esvg_renderable.h \
esvg_rect.h \
esvg_script_provider.h \
esvg_string.h \
esvg_types.h \
esvg_video_provider.h

EXTRA_DIST = \
esvg_private_a.h \
esvg_private_animate.h \
esvg_private_animate_base.h \
esvg_private_animate_tranform.h \
esvg_private_animation.h \
esvg_private_attribute.h \
esvg_private_attribute_animation.h \
esvg_private_attribute_clip_path.h \
esvg_private_attribute_display.h \
esvg_private_attribute_enum.h \
esvg_private_attribute_presentation.h \
esvg_private_attribute_visibility.h \
esvg_private_clip_path.h \
esvg_private_clone.h \
esvg_private_context.h \
esvg_private_element.h \
esvg_private_gradient.h \
esvg_private_input.h \
esvg_private_main.h \
esvg_private_paint_server.h \
esvg_private_parser.h \
esvg_private_referenceable.h \
esvg_private_renderable.h \
esvg_private_renderable_behaviour.h \
esvg_private_renderable_container.h \
esvg_private_script.h \
esvg_private_script_provider.h \
esvg_private_stop.h \
esvg_private_style.h \
esvg_private_svg.h \
esvg_private_types.h \
esvg_private_video.h \
esvg_private_video_provider.h
